<resources>
    <string name="app_name">Sync Monkey</string>

    <string name="settings">Settings</string>

    <string name="title_activity_sharing">SharingActivity</string>

    <string name="pref_key_logs">pref_key_logs</string>
    <string name="hash_error">ERROR</string>
    <string name="hash_unsupported">UNSUPPORTED</string>
    <string name="hash_copied_confirmation">Hash copied to clipboard</string>

    <string name="sync_account_type">com.rfmonkey</string>
    <string name="content_authority">com.chesapeaketechnology.sycnmonkey.provider</string>

    <string name="sync_button_auto_upload_description">All files will be automatically synced at a scheduled interval.
        Use the Sync Button below to force a sync.</string>
    <string name="sync_button_manual_upload_description">Auto upload is disabled.  Syncing will only
        occur using the Sync Button below.</string>
    <string name="sync_button_text">Sync Now</string>

    <string name="container_name_title">Container Name</string>
    <string name="container_name_description">The name of the Azure Blob Storage container where the files will be uploaded to</string>

    <string name="sas_url_title">Azure SAS URL</string>
    <string name="sas_url_description">SAS URL for connecting to the Azure Blob Storage</string>

    <string name="local_sync_directories_title">Local Sync Directories</string>
    <string name="local_sync_directories_description">A colon separated list of relative directories to upload (e.g. Download/NetworkSurveyData:Download/GPSMonkey )</string>

    <string name="device_id_title">Device ID</string>
    <string name="device_id_description">The device ID, which will be used to create a folder to group all uploaded files together</string>

    <string name="auto_sync_title">Auto Sync</string>
    <string name="auto_sync_description">If true, then the SyncMonkey app will run in the background and sync periodically</string>

    <string name="vpn_only_title">VPN Only Upload</string>
    <string name="vpn_only_description">Controls whether files will only be uploaded when a VPN connection is active</string>

    <string name="wifi_only_title">Wi-Fi Only Upload</string>
    <string name="wifi_only_description">Controls whether files will only be uploaded when a Wi-Fi connection is active</string>
    <string name="title_activity_settings">Settings</string>

    <!-- User Preference Constants -->
    <string name="wifi_only_summary_on">Upload files only over Wi-Fi</string>
    <string name="wifi_only_summary_off">Upload files over Wi-Fi and Cellular</string>

    <string name="vpn_only_summary_on">Upload files only when a VPN connection is active</string>
    <string name="vpn_only_summary_off">Upload files regardless of a active VPN connection</string>

    <string name="auto_sync_summary_on">Files will be synced automatically</string>
    <string name="auto_sync_summary_off">Manual upload is required to sync files</string>

    <!-- Server Config User Preference Constants -->
    <string name="server_config_title">Server Config</string>
    <string name="sync_directories_title">Sync Directories</string>
    <string name="sync_directories_summary">The Directories to sync to the server (entries separated by a colon)</string>
    <string name="custom_sas_url_summary_on">The custom URL below will be used instead of the built in config file</string>
    <string name="sas_url_preference_description">SAS URL for connecting to the Azure Blob Storage. This value is not needed if it is set via a config file or managed by the device administrator (MDN).</string>

    <!-- Sharing constants -->
    <string name="file_name_label">File name</string>
    <string name="file_name_multiple_label">Files</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="share_button_text">Share</string>
    <string name="image_mime_type">image/*</string>
    <string name="text_mime_type">text/*</string>
    <string name="wildcard_mime_type">*/*</string>
    <string name="sharing_error_invalid_file_name">Error: Invalid file name. Enter a valid file name.</string>
    <string name="sharing_error_unknown_error">Error: Could not share the file</string>
    <string name="sharing_success_file">Successfully added the file to the Sync Monkey sharing folder</string>
    <string name="sharing_success_multiple_files">Successfully added the files to the Sync Monkey sharing folder</string>
    <string name="sharing_failure_multiple_files">Failed to add %1$s file(s) to the Sync Monkey sharing folder</string>
    <string name="sharing_success_text">Successfully shared the text to the Sync Monkey sharing folder</string>
    <string name="sharing_unsupported_type">Unable to share the content using Sync Monkey</string>

</resources>
